A lot of changes

--- a/src/pages/favorites/favorites.scss
+++ b/src/pages/favorites/favorites.scss
@@ -1,9 +1,9 @@
-.trendContent {
+.favoritesContent {
     background-color: black;
 }
 
 
-.trendItem {
+.favoritesItem {
     background-color: gray; 
     text-align: center;
     width: 80%;
