--- a/src/pages/search/search.scss
+++ b/src/pages/search/search.scss
@@ -1,8 +1,8 @@
-.searchContent {
+.pageContent {
     background-color: black;
 }
 
-.searchItem {
+.pageItem {
     background-color: gray; 
     text-align: center;
     width: 80%;
