--- a/src/theme/pages.scss
+++ b/src/theme/pages.scss
@@ -12,6 +12,14 @@
     margin-right: auto;
 }
 
-.refresher {
-    background-color: white;
+.imageDiv {
+    position: absolute; 
+    width:100%;
 }
+
+.giphy {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
