--- a/src/pages/favorites/favorites.scss
+++ b/src/pages/favorites/favorites.scss
@@ -1,8 +1,8 @@
-.favoritesContent {
+.pageContent {
     background-color: black;
 }
 
-.favoritesItem {
+.pageItem {
     background-color: gray; 
     text-align: center;
     width: 80%;
