--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -3,6 +3,7 @@
     background-repeat: no-repeat;
     background-size: 100% 100%;
     background-color: black;
+    position: relative;
 }
 
 .homeSearchItem {
@@ -18,3 +19,8 @@
     }
 }
 
+.homeImageDiv {
+    position: absolute; 
+    bottom: 0px;
+    width:100%;
+}
